# FILER-workflows

./: .gitignore  LICENSE  README.md  pyproject.toml  query.bed
docs/recipes/: 01-track-discovery.md  02-track-overlaps.md  03-coordinate-search.md  04-rsid-to-positions.md  05-gene-to-positions.md  10-filter-then-overlaps.md  11-filer-selective-install.md
examples/: apoe-rs429358-walkthrough.md  cacna1c-rs1006737-rate-walkthrough.md
input/: genes.txt  rsids.txt
notebooks/python/: 01-track-discovery.ipynb  02-track-overlaps.ipynb  03-coordinate-search.ipynb  10-filter-then-overlaps.ipynb
res/: filer-schema.tsv
scripts/python/: filer_search_tracks.py
src/filerpy/: __init__.py  client.py  trackset.py
src/scripts/python/: filer_coordinate_search.py  filer_filter_then_overlaps.py  filer_find_overlaps.py  filer_install.py  filer_search_tracks.py  gene_to_positions.py  rsid_to_positions.py
tests/integration/: test-recipe01-integration.py
tests/unit/: test-recipe01-unit.py
